@@ -26,6 +26,7 @@
  25. New Thief skills: Borrow Boon, Unearth Demography
  26. Zappermasks now support +-OR to introduce separate conditions
  27. Deities can now be picked at char creation, see DEITYPOLICY in ini file or M.G. control panel
+ 28. Many GREET style Scriptable triggers now support zapper masks instead of pct chance
 # Build 5.9.10 Release 6/16/2020
   1. Wands/etc have enchant type as a restriction, WandMaking/StaffMaking/Rodsmithing support.
   2. New PLAYERDEATH option: RETAIN -- to allow player mobs to keep their items on death.
